--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,9 @@ local.properties
 ## TODO: If you have NuGet Package Restore enabled, uncomment this
 packages/
 
+## Ignore any license files
+[Ll]icense
+
 # Visual C++ cache files
 ipch/
 *.aps
